fix overlapping title hover affects

--- a/web/themes/custom/asulib_barrio/scss/components/views.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/views.scss
@@ -232,9 +232,10 @@
 .collection-browse-object .icon-container a img {
   max-width: 200px;
 }
-
-h3.card-title a:hover {
+h3.card-title {
   line-height: 1.4em;
+}
+h3.card-title a:hover, h3.card-title a:focus {
   text-decoration: none;
 }     
 
